Redo plane costs so larger is more efficient, add fuel tax, and adjust costs / flight time

--- a/airline-web/public/html/tutorial.html
+++ b/airline-web/public/html/tutorial.html
@@ -307,10 +307,10 @@
 
 <div class="tutorial modal" data-category="office" id="tutorialOffice3">
 	<div class="modal-content" style="width: 500px;" onclick="closeModal($(this).closest('.modal'))">
-		<h4>Office Staff</h4>
+		<h4>Staff</h4>
 		<ul>
-			<li class="label">Next, you will find a table of Airline Bases with office staff and overtime information</li>
-			<li class="label">Each of you base/hub has office staff capacity based on its scale and type (HQs have higher staff capacity)</li>
+			<li class="label">Next, you will find a table of Airline Bases with staff and overtime information</li>
+			<li class="label">Each of you base/hub has staff capacity based on its scale and type (HQs have higher staff capacity)</li>
 			<br/>
 			<li class="label">Each of your flight will take up a base number of staff depending on the flight type - longer and internation flights require more staff to maintain</li>
 			<li class="label">Extra frequency and capacity will consumer more staff as well, with higher frequency usually take up more staff than high capacity</li>
