--- a/airline-web/public/html/tutorial.html
+++ b/airline-web/public/html/tutorial.html
@@ -12,17 +12,17 @@
 	<div class="modal-content" style="width: 500px; display: flex; flex-direction: column; align-items: center;" onclick="closeModal($(this).closest('.modal'))">
 		<h4>Menu</h4>
 
-		<h4>Hover your mouse to left side of the window to show the Menu</h4>
+		<h5>Hover your mouse to left side of the window to show the Menu</h5>
 		<div>
 			<img loading="lazy" src="assets/images/tutorial/desktop-menu.gif">
 		</div>
 
-		<h4>On Touch Device, slightly swipe right to pull out the Menu</h4>
+		<h5>On Touch Device, slightly swipe right to pull out the Menu</h5>
 		<div>
 			<img loading="lazy" src="assets/images/tutorial/mobile-menu.gif">
 		</div>
 
-		<h4>Press Escape or Tap on this dialog to proceed</h4>
+		<h5>Press Escape or Tap on this dialog to proceed</h5>
 	</div>
 </div>
 
@@ -30,31 +30,31 @@
 	<div class="modal-content" style="width: 500px;" onclick="closeModal($(this).closest('.modal'))">
 		<h4>Tutorial</h4>
 		<ul>
-			<li class="label" style="padding: 5px;">You must first select an airport to build your Headquarters!</li>
-			<li class="label" style="padding: 5px;">Zoom in and click on the airport icon, then click "View Airport" to see the details of that airport</li>
-			<li class="label" style="padding: 5px;">Smaller airports might require further zoom in before they become visible on the map</li>
-			<li class="label" style="padding: 5px;">
+			<li class="label">You must first select an airport to build your Headquarters!</li>
+			<li class="label">Zoom in and click on the airport icon, then click "View Airport" to see the details of that airport</li>
+			<li class="label">Smaller airports might require further zoom in before they become visible on the map</li>
+			<li class="label">
 				<picture>
 					<source srcset="assets/images/markers/airport-gateway.avif" type="image/avif">
 					<img loading="lazy" src="assets/images/markers/airport-gateway.png" style="vertical-align:middle">
 				</picture>
 				Country Gateway Airport
 			</li>
-			<li class="label" style="padding: 5px;">
+			<li class="label">
 				<picture>
 					<source srcset="assets/images/markers/airport-darker.avif" type="image/avif">
 					<img loading="lazy" src="assets/images/markers/airport-darker.png" style="vertical-align:middle">
 				</picture>
 				Large Airport
 			</li>
-			<li class="label" style="padding: 5px;">
+			<li class="label">
 				<picture>
 					<source srcset="assets/images/markers/airport.avif" type="image/avif">
 					<img loading="lazy" src="assets/images/markers/airport.png" style="vertical-align:middle">
 				</picture>
 				Medium Airport
 			</li>
-			<li class="label" style="padding: 5px;">
+			<li class="label">
 				<picture>
 					<source srcset="assets/images/markers/airport-lighter.avif" type="image/avif">
 					<img loading="lazy" src="assets/images/markers/airport-lighter.png" style="vertical-align:middle">
@@ -71,10 +71,10 @@
 	<div class="modal-content" style="width: 500px;" onclick="closeModal($(this).closest('.modal'))">
 		<h4>Airport Details</h4>
 		<ul>
-			<li class="label" style="padding: 5px;">Airport View contains many crucial information and statistics.</li>
-			<li class="label" style="padding: 5px;">For a quick overview of the airport's strength, inspect the "Airport Rating" box on the top left.</li>
+			<li class="label">Airport View contains many crucial information and statistics.</li>
+			<li class="label">For a quick overview of the airport's strength, inspect the "Airport Rating" box on the top left.</li>
 			<br/>
-			<li class="label" style="padding: 5px;">The more challenging the airport, the more start-up capital you will obtain.</li>
+			<li class="label">The more challenging the airport, the more start-up capital you will obtain.</li>
 		</ul>
 		<div class="clickable footer" onclick='promptSkipTutorial(event)'>Disable Tutorials</div>
 	</div>
@@ -84,10 +84,10 @@
 	<div class="modal-content" style="width: 500px;" onclick="closeModal($(this).closest('.modal'))">
 		<h4>Airport Details</h4>
 		<ul>
-			<li class="label" style="padding: 5px;">Click the Build Headquarters button if you decide to start your HQ here.</li>
-			<li class="label" style="padding: 5px;">Take note that once HQ is built, you can no longer move it unless you rebuild your airlines.</li>
-			<li class="label" style="padding: 5px;">All your initial flights will depart from the HQ airport.</li>
-			<li class="label" style="padding: 5px;">The country houses your HQ will also become your company's home country, which determines your initial relationship with airplane manufacturers and other countries.</li>
+			<li class="label">Click the Build Headquarters button if you decide to start your HQ here.</li>
+			<li class="label">Take note that once HQ is built, you can no longer move it unless you rebuild your airlines.</li>
+			<li class="label">All your initial flights will depart from the HQ airport.</li>
+			<li class="label">The country houses your HQ will also become your company's home country, which determines your initial relationship with airplane manufacturers and other countries.</li>
 		</ul>
 		<div class="clickable footer" onclick='promptSkipTutorial(event)'>Disable Tutorials</div>
 	</div>
@@ -97,7 +97,7 @@
 	<div class="modal-content" style="width: 500px;" onclick="closeModal($(this).closest('.modal'))">
 		<h4>Start your first flight</h4>
 		<ul>
-			<li class="label" style="padding: 5px;">Set up your first flight by clicking "Plan Link" on the airport you want to fly to.</li>
+			<li class="label">Set up your first flight by clicking "Plan Link" on the airport you want to fly to.</li>
 		</ul>
 		<img loading="lazy" src="assets/images/tutorial/plan-link-1.gif" loading="lazy" style="vertical-align:middle; max-width: 100%">
 		<div class="clickable footer" onclick='promptSkipTutorial(event)'>Disable Tutorials</div>
@@ -108,7 +108,7 @@
 	<div class="modal-content" style="width: 500px;" onclick="closeModal($(this).closest('.modal'))">
 		<h4>Edit your flight details</h4>
 		<ul>
-			<li class="label" style="padding: 5px;">Select airplane model, assign airplane, frequency, pricing and service level</li>
+			<li class="label">Select airplane model, assign airplane, frequency, pricing and service level</li>
 		</ul>
 		<picture>
 			<source srcset="assets/images/tutorial/plan-link-1.avif" type="image/avif">
@@ -122,21 +122,21 @@
 	<div class="modal-content" style="width: 500px;" onclick="closeModal($(this).closest('.modal'))">
 		<h4>Purchase Airplanes</h4>
 		<ul>
-			<li class="label" style="padding: 5px;">If you have not yet owned any airplanes of the selected model</li>
+			<li class="label">If you have not yet owned any airplanes of the selected model</li>
 		</ul>
 		<picture>
 			<source srcset="assets/images/tutorial/plan-link-2.avif" type="image/avif">
 			<img loading="lazy" src="assets/images/tutorial/plan-link-2.png" style="vertical-align:middle; max-width: 100%">
 		</picture>
 		<ul>
-			<li class="label" style="padding: 5px;">You can even purchase it in the short-cut section below</li>
+			<li class="label">You can even purchase it in the short-cut section below</li>
 		</ul>
 		<picture>
 			<source srcset="assets/images/tutorial/plan-link-3.avif" type="image/avif">
 			<img loading="lazy" src="assets/images/tutorial/plan-link-3.png" style="vertical-align:middle; max-width: 100%">
 		</picture>
 		<ul>
-			<li class="label" style="padding: 5px;">Or click on the Airplane icon on the left side bar to buy new/used airplanes</li>
+			<li class="label">Or click on the Airplane icon on the left side bar to buy new/used airplanes</li>
 		</ul>
 		<picture>
 			<source srcset="assets/images/tutorial/plan-link-4.avif" type="image/avif">
@@ -151,7 +151,7 @@
 	<div class="modal-content" style="width: 500px;" onclick="closeModal($(this).closest('.modal'))">
 		<h4>Negotiation</h4>
 		<ul>
-			<li class="label" style="padding: 5px;">Looks like negotiation is required to set up this flight!</li>
+			<li class="label">Looks like negotiation is required to set up this flight!</li>
 		</ul>
 		<picture>
 			<source srcset="assets/images/tutorial/negotiation-1.avif" type="image/avif">
@@ -164,7 +164,7 @@
 	<div class="modal-content" style="width: 500px;" onclick="closeModal($(this).closest('.modal'))">
 		<h4>Negotiation Difficulty</h4>
 		<ul>
-			<li class="label" style="padding: 5px;">Every negotiation has its difficulty, the higher the value the more difficult it gets!</li>
+			<li class="label">Every negotiation has its difficulty, the higher the value the more difficult it gets!</li>
 		</ul>
 		<picture>
 			<source srcset="assets/images/tutorial/negotiation-2.avif" type="image/avif">
@@ -177,7 +177,7 @@
 	<div class="modal-content" style="width: 500px;" onclick="closeModal($(this).closest('.modal'))">
 		<h4>Negotiation Difficulty Breakdown</h4>
 		<ul>
-			<li class="label" style="padding: 5px;">To understand the difficulty details. Hover over the bubble next to the difficulty value.</li>
+			<li class="label">To understand the difficulty details. Hover over the bubble next to the difficulty value.</li>
 		</ul>
 		<img loading="lazy" src="assets/images/tutorial/negotiation-1.gif" style="vertical-align:middle; max-width: 100%">
 		<div class="clickable footer" onclick='promptSkipTutorial(event)'>Disable Tutorials</div>
@@ -187,11 +187,11 @@
 	<div class="modal-content" style="width: 500px;" onclick="closeModal($(this).closest('.modal'))">
 		<h4>Assign Delegates</h4>
 		<ul>
-			<li class="label" style="padding: 5px;">You would need to assign delegates to start the negotiations.</li>
-			<li class="label" style="padding: 5px;">The difficulty indicates the minimum delegates required.</li>
-			<li class="label" style="padding: 5px;">The more the delegates, the higher the success rate, the rate is indicated on the right side.</li>
-			<li class="label" style="padding: 5px;">Maximum of 10 delegates can be assigned for the negotiation.</li>
-			<li class="label" style="padding: 5px;">After the negotiation, the delegates involved will have 12 weeks cooldown if the negotiation was successful and 6 weeks if it failed</li>
+			<li class="label">You would need to assign delegates to start the negotiations.</li>
+			<li class="label">The difficulty indicates the minimum delegates required.</li>
+			<li class="label">The more the delegates, the higher the success rate, the rate is indicated on the right side.</li>
+			<li class="label">Maximum of 10 delegates can be assigned for the negotiation.</li>
+			<li class="label">After the negotiation, the delegates involved will have 12 weeks cooldown if the negotiation was successful and 6 weeks if it failed</li>
 		</ul>
 		<picture>
 			<source srcset="assets/images/tutorial/negotiation-3.avif" type="image/avif">
@@ -206,8 +206,8 @@
 	<div class="modal-content" style="width: 500px;" onclick="closeModal($(this).closest('.modal'))">
 		<h4>Too Difficult!</h4>
 		<ul>
-			<li class="label" style="padding: 5px;">Sometimes the negotiation could be too difficult for your available delegates to take action</li>
-			<li class="label" style="padding: 5px;">This will be indicated by the red cross next to the difficulty value</li>
+			<li class="label">Sometimes the negotiation could be too difficult for your available delegates to take action</li>
+			<li class="label">This will be indicated by the red cross next to the difficulty value</li>
 			<picture>
 				<source srcset="assets/images/tutorial/negotiation-4.avif" type="image/avif">
 				<img loading="lazy" src="assets/images/tutorial/negotiation-4.png" style="vertical-align:middle; max-width: 100%">
@@ -215,11 +215,11 @@
 			
 		</ul>
 		<ul>
-			<li class="label" style="padding: 5px;">There are several ways to decrease the difficulty, for example:</li>
-			<li class="label" style="padding: 5px;">- Decrease the frequency of the flight</li>
-			<li class="label" style="padding: 5px;">- Improve the relationship with the target country with country delegates</li>
-			<li class="label" style="padding: 5px;">- Fly to a different airport etc</li>
-			<li class="label" style="padding: 5px;">Always inspect the difficulty breakdown to better understand the issues</li>
+			<li class="label">There are several ways to decrease the difficulty, for example:</li>
+			<li class="label">- Decrease the frequency of the flight</li>
+			<li class="label">- Improve the relationship with the target country with country delegates</li>
+			<li class="label">- Fly to a different airport etc</li>
+			<li class="label">Always inspect the difficulty breakdown to better understand the issues</li>
 		</ul>
 
 		<div class="clickable footer" onclick='promptSkipTutorial(event)'>Disable Tutorials</div>
